--- a/5051/Views/Kiosk/NewProfile.cshtml
+++ b/5051/Views/Kiosk/NewProfile.cshtml
@@ -3,23 +3,80 @@
 @{
     ViewBag.Title = "Kiosk Mode - New Student Profile";
 }
+<link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
 
-<div class="container">
+<div class="form">
 
-	<div class="row">
-		<div class="col-md-1">
-		@Html.ActionLink("< Back", "Index", "Kiosk", null, new { @class = "btn btn-primary btn-sm" })</div>
-	</div>
-	<div class="row">
-		<div class="col"><img src="~/Content/img/KioskReg.png" class="img-responsive"></div>
-	</div>
-
-	<div class="row">
-		
-	  <div class="col-md-6"><button type="submit" class="btn btn-primary">Submit</button>
-	  <button type="reset" class="btn btn-primary">Reset</button></div>
-	  <div class="col-md-6"></div>
+    <div class="row">
+        <div class="col-md-1">
+            @Html.ActionLink("< Back", "Index", "Kiosk", null, new { @class = "btn btn-primary btn-sm" })
+        </div>
     </div>
 
-</div>
+    <div class="main-login main-center">
+        <h3>Create a new profile.</h3>
+        <form class="" method="post" action="#">
+
+            <div class="form-group">
+                <label for="name" class="cols-sm-2 control-label">Your Name</label>
+                <div class="cols-sm-10">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
+                        <input type="text" class="form-control" name="name" id="name" placeholder="Enter your Name" />
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="email" class="cols-sm-2 control-label">Your Student ID</label>
+                <div class="cols-sm-10">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="fa fa-hashtag fa" aria-hidden="true"></i></span>
+                        <input type="number" class="form-control" name="number" id="studentID" placeholder="Enter your Student ID" />
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="username" class="cols-sm-2 control-label">Username</label>
+                <div class="cols-sm-10">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="fa fa-smile fa" aria-hidden="true"></i></span>
+                        <input type="text" class="form-control" name="username" id="username" placeholder="Enter your Username" />
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="password" class="cols-sm-2 control-label">Password</label>
+                <div class="cols-sm-10">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+                        <input type="text" class="form-control" name="passphase" id="passphase" placeholder="Enter your Passphase" />
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="confirm" class="cols-sm-2 control-label">Confirm Password</label>
+                <div class="cols-sm-10">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="fa fa-phone fa-lg" aria-hidden="true"></i></span>
+                        <input type="number" class="form-control" name="phone" id="phone" placeholder="Enter your phone number" />
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="confirm" class="cols-sm-2 control-label">Confirm Password</label>
+                <div class="cols-sm-10">
+                    <div class="input-group">
+                        <input type="checkbox" id="textmsg" name="textmsg" value="1">
+                    </div><p>Opt in for text messages</p>
+                </div>
+            </div>
+            <div class="form-group ">
+                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="reset" class="btn btn-primary">Reset</button>
+            </div>
+
+        </form>
+
+
+    </div>
 
