Updated file structure
Put Avatar, Market, Accomplishments into Student folder. Updated those views in the Controller of Student (took out of Portal Controller). Deleted unused files Group and House in Portal.

--- a/5051/Views/Student/Default.cshtml
+++ b/5051/Views/Student/Default.cshtml
@@ -26,10 +26,10 @@
             <img src="~/Content/img/storeMockup.jpg" class="img-responsive" />
         </div>
         <div id="studentnavicons">
-            <a href="~/Portal/Market" title="Inventory"><i class="fas fa-archive"></i></a>
-            <a href="~/Portal/Market" title="Marketplace"><i class="fas fa-shopping-cart"></i></a>
-            <a href="~/Portal/Accomplishments" title="Accomplishments"><i class="fas fa-trophy"></i></a>
-            <a href="~/Portal/Avatar" title="Avatar"><i class="fas fa-user"></i></a>
+            <a href="~/Student/Market" title="Inventory"><i class="fas fa-archive"></i></a>
+            <a href="~/Student/Market" title="Marketplace"><i class="fas fa-shopping-cart"></i></a>
+            <a href="~/Student/Accomplishments" title="Accomplishments"><i class="fas fa-trophy"></i></a>
+            <a href="~/Student/Avatar" title="Avatar"><i class="fas fa-user"></i></a>
         </div>
         <div id="studentnaviconstext">
             <p></p>
