--- a/5051/Views/Portal/Index.cshtml
+++ b/5051/Views/Portal/Index.cshtml
@@ -13,7 +13,7 @@
 
     <div class="col-md-6">
         <div>
-            <a href="~/Portal/Report">
+            <a href="~/Student/Report">
                 <img src="~/Content/img/ReportPicture.png" class="center" >
                 <br />
                 <span style="display: block; text-align: center; color: #364c70">
