Fixed report backend. Changed folder name to manager

--- a/5051/Views/Admin/Index.cshtml
+++ b/5051/Views/Admin/Index.cshtml
@@ -21,7 +21,7 @@
         @Html.ActionLink("School Calendar", "Calendar", "Admin", null, new { @class = "btn btn-primary" })*@
     <div class="col-md-6">
         <div>
-            <a id="adminReport" href="~/Admin/Report">
+            <a id="adminReport" href="~/Admin/Manage">
                 <img src="~/Content/img/defaultReportIcon.png" width="300" height="300" display: block; />
                 <br />
                 <span display: block;>
