Edits on Community and Default

--- a/5051/Views/Student/Default.cshtml
+++ b/5051/Views/Student/Default.cshtml
@@ -21,7 +21,7 @@
 </script>
 
 <div class="container">
-    <h1 align="center">Welcome to your store</h1>
+    <h1 align="center">Student store name>
         <div class="row text-center">
             <img src="~/Content/img/storeMockup.jpg" class="img-responsive" />
         </div>
