fix margin icons

--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -78,8 +78,7 @@ textarea {
 
     #studentnavicons a {
         font-size: 2.5em;
-        margin-left: 0x;
-        margin-right:20px;
+        margin-left: 5px
     }
 
 
