--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -78,7 +78,8 @@ textarea {
 
     #studentnavicons a {
         font-size: 2.5em;
-        margin-left: 5px
+        margin-left: 5px;
+        margin-right: 10px;
     }
 
 
