--- a/5051/Views/Portal/Login.cshtml
+++ b/5051/Views/Portal/Login.cshtml
@@ -11,7 +11,7 @@
 <div class="form">
 
     <div id="login">
-        <h1>Welcome Back to Nova Town!</h1>
+            <h1 style="font:Lato, sans-serif;"> Welcome Back to Nova Town! </h1 >
 
         <form action="/" method="post">
 
