changed default avatar icon

--- a/5051/Views/Student/Default.cshtml
+++ b/5051/Views/Student/Default.cshtml
@@ -29,7 +29,7 @@
             <a href="~/Student/Community" title="Community"><i class="fas fa-map-signs"></i></a>
             <a href="~/Student/Market" title="Marketplace"><i class="fas fa-shopping-cart"></i></a>
             <a href="~/Student/Accomplishments" title="Accomplishments"><i class="fas fa-trophy"></i></a>
-            <a href="~/Student/Avatar" title="Avatar"><i class="fas fa-user"></i></a>
+            <a href="~/Student/Avatar_Fab5" title="Avatar"><i class="fas fa-user"></i></a>
             <a href="~/Portal/Logout" title="Logout"><i class="fas fa-sign-out-alt"></i></a>
         </div>
         <div id="studentnaviconstext">
