--- a/5051/Views/Student/Avatar_Fab5.cshtml
+++ b/5051/Views/Student/Avatar_Fab5.cshtml
@@ -12,6 +12,6 @@
         <img src="~/Content/img/wireframe_avatar.png" width="800"/>
     </div>
     <div style="font-size:3em">
-        <a href="~/Portal/Index"><i class="far fa-hand-point-left"></i></a>
+        <a href="~/Portal/Default"<i class="far fa-hand-point-left"></i></a>
     </div>
 </div>
