--- a/5051/Views/Student/Market.cshtml
+++ b/5051/Views/Student/Market.cshtml
@@ -14,7 +14,7 @@
         <img src="~/Content/img/wireframe_market.png" width="800" />
     </div>
     <div style="font-size:3em">
-        <a href="~/Portal/Index"><i class="far fa-hand-point-left"></i></a>
+        <a href="~/Portal/Default"<i class="far fa-hand-point-left"></i></a>
     </div>
 </div>
 
