--- a/5051/Views/Student/Accomplishments.cshtml
+++ b/5051/Views/Student/Accomplishments.cshtml
@@ -14,6 +14,6 @@
         <img src="~/Content/img/wireframe_accomplishments.png" width="800" />
     </div>
     <div style="font-size:3em">
-        <a href="~/Portal/Default"<i class="far fa-hand-point-left"></i></a>
+        <a href="~/Portal/Default"><i class="far fa-hand-point-left"></i></a>
     </div>
 
