--- a/5051/Views/Portal/Logout.cshtml
+++ b/5051/Views/Portal/Logout.cshtml
@@ -12,6 +12,6 @@
         <img src="~/Content/img/student_logout.png" width="800" />
     </div>
     <div style="font-size:3em">
-        <a href="~/Portal/Default"><i class="far fa-hand-point-left"></i></a>
+        <a href="~/Student/Default"><i class="far fa-hand-point-left"></i></a>
     </div>
 </div>
