Added admin login. Changed admin menu layout. Changed webpage contact info

--- a/5051/Views/Home/Contact.cshtml
+++ b/5051/Views/Home/Contact.cshtml
@@ -11,6 +11,6 @@
 <a href="https://www.seattleu.edu/">Seattle University</a>
 
 <p>
-    Contact: <a href="mailto:koenigm@seattleu.edu">Mike Koenig</a>
+    Contact: <a href="https://github.com/athena2103/5051Fab5">Fab5</a>
 </p>
 
