--- a/5051/Views/Admin/Index.cshtml
+++ b/5051/Views/Admin/Index.cshtml
@@ -2,29 +2,21 @@
 @{
     ViewBag.Title = "Index";
 }
+
+<head>
+    <link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
+
+</head>
+
 <div class="container">
     <h2>WELCOME TO ADMIN PORTAL</h2>
 
-
-    @*@Html.ActionLink("Avatar Editing", "Index", "Avatar", null, new { @class = "btn btn-primary" })
-
-        <br />
-        <br />
-        @Html.ActionLink("Show Reports", "Report", "Admin", null, new { @class = "btn btn-primary" })
-
-        <br />
-        <br />
-        @Html.ActionLink("Manage Students", "Index", "Student", null, new { @class = "btn btn-primary" })
-
-        <br />
-        <br />
-        @Html.ActionLink("School Calendar", "Calendar", "Admin", null, new { @class = "btn btn-primary" })*@
     <div class="col-md-6">
         <div>
             <a id="adminReport" href="~/Admin/Manage">
-                <img src="~/Content/img/defaultReportIcon.png" width="300" height="300" display: block; />
+                <img src="~/Content/img/defaultReportIcon.png" width="300" height="300" class="center"/>
                 <br />
-                <span display: block;>
+                <span style="display: block; text-align: center; color: #364c70">
                     View/Edit Reports
                 </span>
             </a>
@@ -33,11 +25,11 @@
     </div>
     <div class="col-md-6">
         <a id="adminReport" href="~/Admin/Calendar">
-            <img src="~/Content/img/defaultCalendarIcon.png" width="300" height="300" display: block />
+            <img src="~/Content/img/defaultCalendarIcon.png" width="300" height="300" class="center" />
             <br />
-            <span display:block>
+            <span style="display: block; text-align: center; color: #364c70">
                 Override Calendar
             </span>
         </a>
     </div>
-
+</div>
