--- a/5051/Views/Student/Report.cshtml
+++ b/5051/Views/Student/Report.cshtml
@@ -2,8 +2,9 @@
 @{
     ViewBag.Title = "My Reports";
 }
+
 <div class="container">
-    <h2>Welcome to my Reports</h2>
+    <h2 align="center">My Report</h2>
     <div class="row text-center">
         <img src="~/Content/img/StudentReport.png" width="800" class="img-responsive" />
         <br />
