--- a/5051/Views/Portal/Login.cshtml
+++ b/5051/Views/Portal/Login.cshtml
@@ -9,32 +9,34 @@
 
 
 <div class="form">
+    <div class="sunset-background">
 
-    <div id="login">
-            <h1 style="font:Lato, sans-serif;"> Welcome Back to Nova Town! </h1 >
+        <div id="login">
+            <h1 style="font:Lato, sans-serif;"> Welcome Back to Nova Town! </h1>
 
-        <form action="/" method="post">
+            <form action="/" method="post">
 
-            <div class="field-wrap">
-                <label>
-                    Email Address<span class="req">*</span>
-                </label>
-                <input type="email" required autocomplete="off" />
-            </div>
+                <div class="field-wrap">
+                    <label>
+                        Email Address<span class="req">*</span>
+                    </label>
+                    <input type="email" required autocomplete="off" />
+                </div>
 
-            <div class="field-wrap">
-                <label>
-                    Password<span class="req">*</span>
-                </label>
-                <input type="password" required autocomplete="off" />
-            </div>
+                <div class="field-wrap">
+                    <label>
+                        Password<span class="req">*</span>
+                    </label>
+                    <input type="password" required autocomplete="off" />
+                </div>
 
-            <p class="forgot"><a href="#">Forgot Password?</a></p>
+                <p class="forgot"><a href="#">Forgot Password?</a></p>
 
-            <a href="~/Portal/Index" class="button button-block" role="button">Log In</a>
+                <a href="~/Portal/Index" class="button button-block" role="button">Log In</a>
 
-        </form>
+            </form>
 
+        </div>
     </div>
  
 </div>
