--- a/5051/Views/Portal/Login.cshtml
+++ b/5051/Views/Portal/Login.cshtml
@@ -7,9 +7,8 @@
 
 </head>
 
-
-<div class="form">
-    <div class="sunset-background">
+<div id="container">
+    <div class="form">
 
         <div id="login">
             <h1 style="font:Lato, sans-serif;"> Welcome Back to Nova Town! </h1>
@@ -37,9 +36,9 @@
             </form>
 
         </div>
+
     </div>
- 
+    <!-- /form -->
 </div>
-<!-- /form -->
 
 
