--- a/5051/Views/Admin/Manage.cshtml
+++ b/5051/Views/Admin/Manage.cshtml
@@ -189,6 +189,7 @@
                                                         <div class="row">
                                                             <div class="col-sm-8">
                                                                     @Html.ActionLink("Edit", "Manage", "Admin", new { id = item.Id, cmd = "Update" }, new { @class = "btn btn-primary" })
+                                                                    @Html.ActionLink("Back", "Manage", "Admin", new { id = ""}, new { @class = "btn btn-success" })
                                                             </div>
                                                         </div>
 
