Report Student fix

--- a/5051/Views/Student/Report.cshtml
+++ b/5051/Views/Student/Report.cshtml
@@ -5,8 +5,11 @@
 
 <div class="container">
     <h2 align="center">My Report</h2>
-    <div class="row text-center">
-        <img src="~/Content/img/studentReportWireframe.png" width="800" class="img-responsive" />
-        <br />
-    </div>
 
+    <div class="container">
+        <div class="row text-center">
+            <img src="~/Content/img/studentReportWireframe.png" width="800" class="img-responsive" />
+            <br />
+        </div>
+    </div>
+</div>
