--- a/5051/Content/Login.css
+++ b/5051/Content/Login.css
@@ -7,6 +7,8 @@
 
 #container {
     background-image: url("../Content/img/sunset.png");
+    background-position: center center;
+    background-repeat: no-repeat;
     background-size: cover;
     margin: 0 auto;
     padding: 50px;
