--- a/5051/Views/Portal/Index.cshtml
+++ b/5051/Views/Portal/Index.cshtml
@@ -10,26 +10,27 @@
 
 <div id="container">
     <h2>WELCOME TO STUDENT PORTAL</h2>
+    <div class="row text-center">
+        <div class="col-md-6">
+            <div>
+                <a href="~/Student/Report">
+                    <img src="~/Content/img/ReportPicture.png" class="center">
+                    <br />
+                    <span style="display: block; text-align: center; color: #364c70">
+                        View Reports
+                    </span>
+                </a>
+            </div>
 
-    <div class="col-md-6">
-        <div>
-            <a href="~/Student/Report">
-                <img src="~/Content/img/ReportPicture.png" class="center" >
+        </div>
+        <div class="col-md-6">
+            <a href="~/Student/Default">
+                <img src="~/Content/img/GameIcon.png" class="center">
                 <br />
                 <span style="display: block; text-align: center; color: #364c70">
-                    View Reports
+                    Play Game
                 </span>
             </a>
         </div>
-
+        </div>
     </div>
-    <div class="col-md-6">
-        <a href="~/Student/Default">
-            <img src="~/Content/img/GameIcon.png" class="center">
-            <br />
-            <span style="display: block; text-align: center; color: #364c70">
-                Play Game
-            </span>
-        </a>
-    </div>
-</div>
