font change - index

--- a/5051/Views/Portal/Index.cshtml
+++ b/5051/Views/Portal/Index.cshtml
@@ -16,7 +16,7 @@
                 <a href="~/Student/Report">
                     <img src="~/Content/img/ReportPicture.png" class="center">
                     <br />
-                    <span style="display: block; text-align: center; color: #364c70">
+                    <span style="display: block; text-align: center; font-size:3em; color: #fff">
                         View Reports
                     </span>
                 </a>
@@ -27,7 +27,7 @@
             <a href="~/Student/Default">
                 <img src="~/Content/img/GameIcon.png" class="center">
                 <br />
-                <span style="display: block; text-align: center; color: #364c70">
+                <span style="display: block; text-align: center; font-size:3em; color: #fff">
                     Play Game
                 </span>
             </a>
