added div id=background

--- a/5051/Views/Portal/Index.cshtml
+++ b/5051/Views/Portal/Index.cshtml
@@ -8,7 +8,7 @@
    
 </head>
 
-<div id="container">
+<div id="background">
     <h2>WELCOME TO STUDENT PORTAL</h2>
     <div class="row text-center">
         <div class="col-md-6">
