--- a/5051/Views/Student/Report.cshtml
+++ b/5051/Views/Student/Report.cshtml
@@ -4,12 +4,14 @@
 }
 
 <div class="container">
-    <h2 align="center">My Report</h2>
+    <div id="background">
+        <h2 align="center">My Report</h2>
 
-    <div class="container">
-        <div class="row text-center">
-            <img src="~/Content/img/studentReportWireframe.png" width="800" class="img-responsive" />
-            <br />
+        <div class="container">
+            <div class="row text-center">
+                <img src="~/Content/img/studentReportWireframe.png" width="800" class="img-responsive" />
+                <br />
+            </div>
         </div>
     </div>
 </div>
