--- a/5051/Content/Login.css
+++ b/5051/Content/Login.css
@@ -5,7 +5,7 @@
 
 }
 
-#container {
+#background {
     background-image: url("../Content/img/sunset.png");
     background-position: center center;
     background-repeat: no-repeat;
