--- a/5051/Views/Portal/Logout.cshtml
+++ b/5051/Views/Portal/Logout.cshtml
@@ -3,15 +3,18 @@
     ViewBag.Title = "Logout";
 }
 
-<head>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-</head>
+
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+
+<link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
 
 <div class="container">
-    <div class="row text-center">
-        <img src="~/Content/img/student_logout.png" width="800" />
-    </div>
-    <div style="font-size:3em">
-        <a href="~/Student/Default"><i class="far fa-hand-point-left"></i></a>
+    <div id="background">
+        <div class="row text-center">
+            <img src="~/Content/img/student_logout.png" width="800" />
+        </div>
+        <div style="font-size:3em">
+            <a href="~/Student/Default"><i class="far fa-hand-point-left"></i></a>
+        </div>
     </div>
 </div>
